--- a/pom.xml
+++ b/pom.xml
@@ -17,22 +17,40 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
-<!--		We will Uncomment These Lines WHEN We are ready to Connect DATABASE -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
 
+<!--		For Web-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-<!--	 	<dependency>-->
-<!--        	<groupId>org.springframework.boot</groupId>-->
-<!--        	<artifactId>spring-boot-starter-security</artifactId>-->
-<!--	 	</dependency>-->
+<!--				We will Uncomment These Lines WHEN We are ready to Connect DATABASE -->
+<!--		For DATABASE-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 
+<!--		For Mail Service-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
+<!--		For Security-->
+	 	<dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-starter-security</artifactId>
+	 	</dependency>
+
+<!--		For Lambok-->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+
+<!--		For DATABASE-->
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
