--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/student
 spring.datasource.username=aiokleo
 spring.datasource.password=lavish88
 # The DataBase Will be Clean every time we restate the server for : create-drop  Command
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 # For showing the SQL in The Console.
 #spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
