--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,8 @@ server.error.include-binding-errors=always
 #spring.mail.username=amir.ul.islam55971@gmail.com
 #spring.mail.password=
 spring.mail.host=localhost
+# Using this commands in local
+#docker run -p 1080:1080 -p 1025:1025 maildev/maildev
 spring.mail.port=1025
 spring.mail.username=hello
 spring.mail.password=hello
