--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8090
 spring.datasource.url=jdbc:postgresql://localhost:5432/student
 spring.datasource.username=aiokleo
 spring.datasource.password=lavish88
@@ -22,7 +23,7 @@ server.error.include-binding-errors=always
 #spring.mail.password=
 spring.mail.host=localhost
 # Using this commands in local
-#docker run -p 1080:1080 -p 1025:1025 maildev/maildev
+# docker run -p 1080:1080 -p 1025:1025 maildev/maildev
 spring.mail.port=1025
 spring.mail.username=hello
 spring.mail.password=hello
