--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-#server.port=8090
+server.port=8090
 spring.datasource.url=jdbc:postgresql://localhost:5432/student
 spring.datasource.username=aiokleo
 spring.datasource.password=lavish88
 
 # The DataBase Will be Clean every time we restate the server for : create-drop  Command
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 # For showing the SQL in The Console.
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -23,6 +23,7 @@ server.error.include-binding-errors=always
 #spring.mail.password=
 spring.mail.host=localhost
 # Using this commands in local
+#systemctl start docker
 # docker run -p 1080:1080 -p 1025:1025 maildev/maildev
 spring.mail.port=1025
 spring.mail.username=hello
@@ -36,3 +37,4 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 #spring.mail.properties.mail.smtp.timeout=3000
 #spring.mail.properties.mail.smtp.writetimeout=5000
 ##
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
