--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-#server.port=8090
-spring.datasource.url=jdbc:postgresql://localhost:5432/student
-spring.datasource.username=aiokleo
-spring.datasource.password=lavish88
+server.port=8090
+spring.datasource.url=jdbc:postgresql://localhost:5432/srs
+spring.datasource.username=testrun
+spring.datasource.password=zero2nine
 
 # The DataBase Will be Clean every time we restate the server for : create-drop  Command
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 # For showing the SQL in The Console.
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
