--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,13 @@
         	<artifactId>spring-boot-starter-security</artifactId>
 	 	</dependency>
 
+		<dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>5.7.5</version>
+        </dependency>
+
+
 <!--		For Lombok-->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
